--- a/thesis/Result_Figure11.ipynb
+++ b/thesis/Result_Figure11.ipynb
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,26 +210,20 @@
     "            \n",
     "        tot_filtered_df = pd.concat([tot_filtered_df, filtered_df], axis = 0)\n",
     "    \n",
-    "        tot_exist_df = tot_filtered_df[tot_filtered_df['lang'].isin(tot_filtered_df['lang'].value_counts()[lambda x: x == len([ 2022, 2023, 2024])].index)].copy()\n",
-    "        tot_exist_df=  tot_exist_df.sort_values(by = ['year', 'CID'], ascending=[False, True])\n",
+    "        tot_exist_df    = tot_filtered_df[tot_filtered_df['lang'].isin(tot_filtered_df['lang'].value_counts()[lambda x: x == len([ 2022, 2023, 2024])].index)].copy()\n",
+    "        tot_exist_df    =  tot_exist_df.sort_values(by = ['year', 'CID'], ascending=[False, True])\n",
     "    return tot_exist_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2019, 2020, 2021, 2022]\n",
-      "[2020, 2021, 2022, 2023]\n",
-      "[2021, 2022, 2023, 2024]\n",
-      "[2020, 2021, 2022]\n",
-      "[2021, 2022, 2023]\n",
-      "[2022, 2023, 2024]\n",
       "[2020, 2021, 2022]\n",
       "[2021, 2022, 2023]\n",
       "[2022, 2023, 2024]\n"
@@ -237,9 +231,123 @@
     }
    ],
    "source": [
-    "tot_df_r = filter_df(df, 'ratio')\n",
+    "# tot_df_r = filter_df(df, 'ratio')\n",
     "tot_df_log = filter_df(df, 'log')\n",
-    "tot_df_nr = filter_df(df, 'notratio')"
+    "# tot_df_nr = filter_df(df, 'notratio')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = df[['year', 'dart']].copy()\n",
+    "test['dart'] = np.log(test['dart'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year</th>\n",
+       "      <th>dart</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2020</td>\n",
+       "      <td>10.518673</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2021</td>\n",
+       "      <td>10.403839</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>10.685652</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2023</td>\n",
+       "      <td>10.930640</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2024</td>\n",
+       "      <td>10.704951</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   year       dart\n",
+       "0  2019        NaN\n",
+       "1  2020  10.518673\n",
+       "2  2021  10.403839\n",
+       "3  2022  10.685652\n",
+       "4  2023  10.930640\n",
+       "5  2024  10.704951"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.39664699999999975"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "10.685652-10.403839-10.403839+10.518673"
    ]
   },
   {
@@ -431,6 +539,11 @@
    "source": [
     "draw_bar_garph_for_df(tot_df_log)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
