--- a/thesis/Data_Fig5.ipynb
+++ b/thesis/Data_Fig5.ipynb
@@ -766,7 +766,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv_stackoverflow_src",
    "language": "python",
    "name": "python3"
   },
@@ -780,7 +780,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
