--- a/thesis/Result_Figure12.ipynb
+++ b/thesis/Result_Figure12.ipynb
@@ -403,6 +403,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def get_CID_ratio_rel_df(df, year) : \n",
+    "    year_list = [year-3, year-2, year-1, year]\n",
+    "    print(year_list)\n",
+    "    df = df = df[df['year'].isin(year_list)]\n",
+    "    df_salary = df.melt(id_vars = 'year', value_vars = df.columns[1:], var_name = 'lang', value_name = 'salary')\n",
+    "    df_salary = df_salary.dropna()\n",
+    "\n",
+    "    valid_langs = df_salary['lang'].value_counts()[lambda x: x == len(year_list)].index\n",
+    "    filtered_df = df_salary[df_salary['lang'].isin(valid_langs)].copy()\n",
+    "\n",
+    "    # 언어별로 연도 정렬 후 상대 변화율(성장률) 계산\n",
+    "    filtered_df.sort_values(by=['lang', 'year'], inplace=True)\n",
+    "    filtered_df['growth_rate'] = filtered_df.groupby('lang')['salary'].pct_change()\n",
+    "\n",
+    "    # growth_rate의 이차 차분 = CID 계산\n",
+    "    filtered_df['CID'] = filtered_df.groupby('lang')['growth_rate'].diff()\n",
+    "    filtered_df['CID'] = filtered_df.groupby('lang')['CID'].diff()\n",
+    "\n",
+    "    # 최종 정리: CID 계산이 가능한 연도만 남김\n",
+    "    filtered_df = filtered_df.dropna(subset=['growth_rate', 'CID']).reset_index(drop=True)\n",
+    "\n",
+    "\n",
+    "    return filtered_df\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def filter_df( df, type ) :\n",
     "    tot_filtered_df = pd.DataFrame()\n",
     "    for year in [ 2022, 2023, 2024] : \n",
@@ -410,6 +443,9 @@
     "            filtered_df = get_CID_ratio_df(df, year)\n",
     "        elif type == 'log' : \n",
     "            filtered_df = get_CID_log_df(df, year)\n",
+    "        elif type == 'ratio_rel' :\n",
+    "            filtered_df = get_CID_ratio_rel_df(df, year)\n",
+    "            \n",
     "        else :\n",
     "            filtered_df = get_CID_df(df, year)\n",
     "            \n",
@@ -422,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -437,19 +473,23 @@
       "[2022, 2023, 2024]\n",
       "[2020, 2021, 2022]\n",
       "[2021, 2022, 2023]\n",
-      "[2022, 2023, 2024]\n"
+      "[2022, 2023, 2024]\n",
+      "[2019, 2020, 2021, 2022]\n",
+      "[2020, 2021, 2022, 2023]\n",
+      "[2021, 2022, 2023, 2024]\n"
      ]
     }
    ],
    "source": [
     "tot_df_r = filter_df(df, 'ratio')\n",
     "tot_df_log = filter_df(df, 'log')\n",
-    "tot_df_nr = filter_df(df, 'notratio')"
+    "tot_df_nr = filter_df(df, 'notratio')\n",
+    "tot_df_rl = filter_df(df, 'ratio_rel')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -543,7 +583,7 @@
        "4  typescript     12.182430"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -555,16 +595,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cid_cnt_df = pd.merge(tot_df_r, x_value_df, on = ['lang'])"
+    "cid_cnt_df = pd.merge(tot_df_rl, x_value_df, on = ['lang'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -591,7 +631,7 @@
        "      <th>year</th>\n",
        "      <th>lang</th>\n",
        "      <th>salary</th>\n",
-       "      <th>salary_ratio</th>\n",
+       "      <th>growth_rate</th>\n",
        "      <th>CID</th>\n",
        "      <th>log_db_count</th>\n",
        "    </tr>\n",
@@ -602,7 +642,7 @@
        "      <td>2022</td>\n",
        "      <td>ruby</td>\n",
        "      <td>93000.0</td>\n",
-       "      <td>1.162500</td>\n",
+       "      <td>0.162500</td>\n",
        "      <td>-0.144354</td>\n",
        "      <td>12.326359</td>\n",
        "    </tr>\n",
@@ -611,7 +651,7 @@
        "      <td>2022</td>\n",
        "      <td>r</td>\n",
        "      <td>67734.0</td>\n",
-       "      <td>1.139267</td>\n",
+       "      <td>0.139267</td>\n",
        "      <td>-0.056213</td>\n",
        "      <td>13.051454</td>\n",
        "    </tr>\n",
@@ -620,7 +660,7 @@
        "      <td>2022</td>\n",
        "      <td>vba</td>\n",
        "      <td>62328.0</td>\n",
-       "      <td>1.157975</td>\n",
+       "      <td>0.157975</td>\n",
        "      <td>-0.025537</td>\n",
        "      <td>12.220818</td>\n",
        "    </tr>\n",
@@ -629,7 +669,7 @@
        "      <td>2022</td>\n",
        "      <td>rust</td>\n",
        "      <td>87047.0</td>\n",
-       "      <td>1.122752</td>\n",
+       "      <td>0.122752</td>\n",
        "      <td>0.055125</td>\n",
        "      <td>10.380187</td>\n",
        "    </tr>\n",
@@ -638,7 +678,7 @@
        "      <td>2022</td>\n",
        "      <td>go</td>\n",
        "      <td>89204.0</td>\n",
-       "      <td>1.178871</td>\n",
+       "      <td>0.178871</td>\n",
        "      <td>0.058763</td>\n",
        "      <td>11.085307</td>\n",
        "    </tr>\n",
@@ -647,7 +687,7 @@
        "      <td>2022</td>\n",
        "      <td>typescript</td>\n",
        "      <td>70276.0</td>\n",
-       "      <td>1.187656</td>\n",
+       "      <td>0.187656</td>\n",
        "      <td>0.061446</td>\n",
        "      <td>12.182430</td>\n",
        "    </tr>\n",
@@ -656,7 +696,7 @@
        "      <td>2022</td>\n",
        "      <td>sql</td>\n",
        "      <td>69108.0</td>\n",
-       "      <td>1.229067</td>\n",
+       "      <td>0.229067</td>\n",
        "      <td>0.093917</td>\n",
        "      <td>13.377085</td>\n",
        "    </tr>\n",
@@ -665,7 +705,7 @@
        "      <td>2022</td>\n",
        "      <td>c</td>\n",
        "      <td>67186.0</td>\n",
-       "      <td>1.263275</td>\n",
+       "      <td>0.263275</td>\n",
        "      <td>0.097453</td>\n",
        "      <td>12.867247</td>\n",
        "    </tr>\n",
@@ -674,7 +714,7 @@
        "      <td>2022</td>\n",
        "      <td>c#</td>\n",
        "      <td>69516.0</td>\n",
-       "      <td>1.190995</td>\n",
+       "      <td>0.190995</td>\n",
        "      <td>0.109097</td>\n",
        "      <td>14.258946</td>\n",
        "    </tr>\n",
@@ -683,7 +723,7 @@
        "      <td>2022</td>\n",
        "      <td>python</td>\n",
        "      <td>71105.0</td>\n",
-       "      <td>1.195967</td>\n",
+       "      <td>0.195967</td>\n",
        "      <td>0.117085</td>\n",
        "      <td>14.518880</td>\n",
        "    </tr>\n",
@@ -692,7 +732,7 @@
        "      <td>2022</td>\n",
        "      <td>scala</td>\n",
        "      <td>92780.0</td>\n",
-       "      <td>1.192055</td>\n",
+       "      <td>0.192055</td>\n",
        "      <td>0.118203</td>\n",
        "      <td>11.604328</td>\n",
        "    </tr>\n",
@@ -701,7 +741,7 @@
        "      <td>2022</td>\n",
        "      <td>javascript</td>\n",
        "      <td>65580.0</td>\n",
-       "      <td>1.213343</td>\n",
+       "      <td>0.213343</td>\n",
        "      <td>0.120187</td>\n",
        "      <td>14.698014</td>\n",
        "    </tr>\n",
@@ -710,7 +750,7 @@
        "      <td>2022</td>\n",
        "      <td>java</td>\n",
        "      <td>64572.0</td>\n",
-       "      <td>1.244450</td>\n",
+       "      <td>0.244450</td>\n",
        "      <td>0.130468</td>\n",
        "      <td>14.434387</td>\n",
        "    </tr>\n",
@@ -719,7 +759,7 @@
        "      <td>2022</td>\n",
        "      <td>kotlin</td>\n",
        "      <td>69318.0</td>\n",
-       "      <td>1.258702</td>\n",
+       "      <td>0.258702</td>\n",
        "      <td>0.166404</td>\n",
        "      <td>11.270408</td>\n",
        "    </tr>\n",
@@ -728,7 +768,7 @@
        "      <td>2022</td>\n",
        "      <td>c++</td>\n",
        "      <td>68000.0</td>\n",
-       "      <td>1.258118</td>\n",
+       "      <td>0.258118</td>\n",
        "      <td>0.182169</td>\n",
        "      <td>13.563843</td>\n",
        "    </tr>\n",
@@ -737,7 +777,7 @@
        "      <td>2022</td>\n",
        "      <td>swift</td>\n",
        "      <td>78468.0</td>\n",
-       "      <td>1.331998</td>\n",
+       "      <td>0.331998</td>\n",
        "      <td>0.283670</td>\n",
        "      <td>12.668897</td>\n",
        "    </tr>\n",
@@ -746,7 +786,7 @@
        "      <td>2022</td>\n",
        "      <td>objective-c</td>\n",
        "      <td>83165.0</td>\n",
-       "      <td>1.282243</td>\n",
+       "      <td>0.282243</td>\n",
        "      <td>0.287657</td>\n",
        "      <td>12.583289</td>\n",
        "    </tr>\n",
@@ -755,7 +795,7 @@
        "      <td>2022</td>\n",
        "      <td>assembly</td>\n",
        "      <td>75000.0</td>\n",
-       "      <td>1.358425</td>\n",
+       "      <td>0.358425</td>\n",
        "      <td>0.294222</td>\n",
        "      <td>10.631229</td>\n",
        "    </tr>\n",
@@ -764,28 +804,28 @@
        "</div>"
       ],
       "text/plain": [
-       "    year         lang   salary  salary_ratio       CID  log_db_count\n",
-       "36  2022         ruby  93000.0      1.162500 -0.144354     12.326359\n",
-       "37  2022            r  67734.0      1.139267 -0.056213     13.051454\n",
-       "38  2022          vba  62328.0      1.157975 -0.025537     12.220818\n",
-       "39  2022         rust  87047.0      1.122752  0.055125     10.380187\n",
-       "40  2022           go  89204.0      1.178871  0.058763     11.085307\n",
-       "41  2022   typescript  70276.0      1.187656  0.061446     12.182430\n",
-       "42  2022          sql  69108.0      1.229067  0.093917     13.377085\n",
-       "43  2022            c  67186.0      1.263275  0.097453     12.867247\n",
-       "44  2022           c#  69516.0      1.190995  0.109097     14.258946\n",
-       "45  2022       python  71105.0      1.195967  0.117085     14.518880\n",
-       "46  2022        scala  92780.0      1.192055  0.118203     11.604328\n",
-       "47  2022   javascript  65580.0      1.213343  0.120187     14.698014\n",
-       "48  2022         java  64572.0      1.244450  0.130468     14.434387\n",
-       "49  2022       kotlin  69318.0      1.258702  0.166404     11.270408\n",
-       "50  2022          c++  68000.0      1.258118  0.182169     13.563843\n",
-       "51  2022        swift  78468.0      1.331998  0.283670     12.668897\n",
-       "52  2022  objective-c  83165.0      1.282243  0.287657     12.583289\n",
-       "53  2022     assembly  75000.0      1.358425  0.294222     10.631229"
+       "    year         lang   salary  growth_rate       CID  log_db_count\n",
+       "36  2022         ruby  93000.0     0.162500 -0.144354     12.326359\n",
+       "37  2022            r  67734.0     0.139267 -0.056213     13.051454\n",
+       "38  2022          vba  62328.0     0.157975 -0.025537     12.220818\n",
+       "39  2022         rust  87047.0     0.122752  0.055125     10.380187\n",
+       "40  2022           go  89204.0     0.178871  0.058763     11.085307\n",
+       "41  2022   typescript  70276.0     0.187656  0.061446     12.182430\n",
+       "42  2022          sql  69108.0     0.229067  0.093917     13.377085\n",
+       "43  2022            c  67186.0     0.263275  0.097453     12.867247\n",
+       "44  2022           c#  69516.0     0.190995  0.109097     14.258946\n",
+       "45  2022       python  71105.0     0.195967  0.117085     14.518880\n",
+       "46  2022        scala  92780.0     0.192055  0.118203     11.604328\n",
+       "47  2022   javascript  65580.0     0.213343  0.120187     14.698014\n",
+       "48  2022         java  64572.0     0.244450  0.130468     14.434387\n",
+       "49  2022       kotlin  69318.0     0.258702  0.166404     11.270408\n",
+       "50  2022          c++  68000.0     0.258118  0.182169     13.563843\n",
+       "51  2022        swift  78468.0     0.331998  0.283670     12.668897\n",
+       "52  2022  objective-c  83165.0     0.282243  0.287657     12.583289\n",
+       "53  2022     assembly  75000.0     0.358425  0.294222     10.631229"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -796,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -858,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -876,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
