--- a/thesis/Result_Fig3.ipynb
+++ b/thesis/Result_Fig3.ipynb
@@ -1437,7 +1437,35 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "x = chow_df_1year['rel_week'].values\n",
+    "y = chow_df_1year['Cognitive Complexity'].values\n",
+    "\n",
+    "split_idx = np.argmax(np.where(x < 0))+1\n",
+    "x1= x[:split_idx]\n",
+    "x2= x[split_idx:]\n",
+    "# 시각화\n",
+    "plt.figure(figsize=(7, 6))\n",
+    "plt.scatter(x, y,  alpha=0.6, color='darkgray')\n",
+    "plt.plot(x, st_chow_1year.y_predict, label=\"Full Model\", linestyle=\"--\", color=\"black\")  \n",
+    "\n",
+    "\n",
+    "plt.plot(x1, st_chow_1year.y1_predict, label=\"before chatGPT\", linewidth='2')\n",
+    "plt.fill_between(x1, st_chow_1year.y1_predict - st_chow_1year.y1_conf_interval, st_chow_1year.y1_predict + st_chow_1year.y1_conf_interval, alpha=0.1)\n",
+    "\n",
+    "plt.plot(x2, st_chow_1year.y2_predict, label=\"after chatGPT\", linewidth='2')\n",
+    "plt.fill_between(x2, st_chow_1year.y2_predict - st_chow_1year.y2_conf_interval, st_chow_1year.y2_predict + st_chow_1year.y2_conf_interval, alpha=0.1)\n",
+    "\n",
+    "plt.text(22, 1.5, s=f'F-Statistic : {F_stat_1:.2f}\\np-value : {p_value_1:.4f}', fontsize = 10) #\n",
+    "plt.axvline(x=0,     color='red',    linestyle='-.', linewidth=1)\n",
+    "\n",
+    "plt.legend( loc='upper left')\n",
+    "plt.xlabel(\"Week Relative to ChatGPT Release\", fontsize=15)\n",
+    "plt.ylabel(\"Weekly Average Complexity\", fontsize=15)\n",
+    "plt.grid(True, linestyle='--', alpha=0.3)\n",
+    "plt.savefig(\"./fig/Result_Fig3.png\", dpi=300, bbox_inches='tight')  # DPI 설정 및 여백 최소화\n",
+    "plt.show()\n"
+   ]
   },
   {
    "cell_type": "code",
