--- a/submission/Result_Fig1.ipynb
+++ b/submission/Result_Fig1.ipynb
@@ -51,55 +51,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from matplotlib import pyplot as plt\n",
+    "from matplotlib import font_manager\n",
+    "import matplotlib as mpl\n",
     "from matplotlib import font_manager as fm\n",
     "\n",
+    "# 설치된 폰트 이름과 경로 확인\n",
+    "for font in font_manager.fontManager.ttflist:\n",
+    "    if 'Helvetica' in font.name: # 'Nanum' 대신 원하는 글꼴의 일부를 입력하여 검색할 수 있습니다.\n",
+    "        print(font.name, font.fname)\n",
+    "\n",
     "# 직접 경로로 Helvetica 폰트 불러오기\n",
-    "font_path = \"/home/mghan/.fonts/Helvetica/Helvetica.ttf\"\n",
-    "font_prop = fm.FontProperties(fname=font_path)\n",
-    "fm.fontManager.addfont(font_path)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Registered font name: Helvetica\n"
-     ]
-    }
-   ],
-   "source": [
+    "font_path = \"/System/Library/Fonts/Helvetica.ttc\"\n",
     "font_prop = fm.FontProperties(fname=font_path)\n",
     "font_name = font_prop.get_name()\n",
-    "print(f\"Registered font name: {font_name}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mpl.rcParams['font.family'] = font_name"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib as mpl\n",
-    "mpl.rcParams['font.family'] = 'Helvetica'  # 위에서 확인한 이름 정확히 입력"
+    "print(f\"Registered font name: {font_name}\")\n",
+    "\n",
+    "mpl.rcParams['font.family'] = font_name\n"
    ]
   },
   {
@@ -2143,7 +2114,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv_stackoverflow_src",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2157,7 +2128,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
