--- a/LLM/1_acc_test copy 2.ipynb
+++ b/LLM/1_acc_test copy 2.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -35,15 +35,15 @@
      "text": [
       "Task l_4_10_Y_sys_prompt10_5 시작\n",
       "Task l_4_10_Y_sys_prompt10_5 실행 중: 0\n",
-      "./result/sc_l_result_4_10_Y_10_sys_prompt10_5_0.01_ver1_0.csv\n",
-      "/usr/share/d_ollama/data/q_output_code_y.csv\n"
+      "./result/sc_l_result_4_10_Y_10_sys_prompt10_5_0.01_ver4_0.csv\n",
+      "/usr/share/d_ollama/data/q_output_code_y_105.csv\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "50it [07:30,  9.01s/it]\n"
+      "50it [07:03,  8.48s/it]\n"
      ]
     },
     {
@@ -51,15 +51,15 @@
      "output_type": "stream",
      "text": [
       "Task l_4_10_Y_sys_prompt10_5 실행 중: 1\n",
-      "./result/sc_l_result_4_10_Y_10_sys_prompt10_5_0.01_ver1_1.csv\n",
-      "/usr/share/d_ollama/data/q_output_code_y.csv\n"
+      "./result/sc_l_result_4_10_Y_10_sys_prompt10_5_0.01_ver4_1.csv\n",
+      "/usr/share/d_ollama/data/q_output_code_y_105.csv\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "50it [09:04, 10.89s/it]\n"
+      "50it [07:04,  8.48s/it]\n"
      ]
     },
     {
@@ -67,15 +67,135 @@
      "output_type": "stream",
      "text": [
       "Task l_4_10_Y_sys_prompt10_5 실행 중: 2\n",
-      "./result/sc_l_result_4_10_Y_10_sys_prompt10_5_0.01_ver1_2.csv\n",
-      "/usr/share/d_ollama/data/q_output_code_y.csv\n"
+      "./result/sc_l_result_4_10_Y_10_sys_prompt10_5_0.01_ver4_2.csv\n",
+      "/usr/share/d_ollama/data/q_output_code_y_105.csv\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "17it [03:21, 12.57s/it]"
+      "50it [07:46,  9.33s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Task l_4_10_Y_sys_prompt10_5 실행 중: 3\n",
+      "./result/sc_l_result_4_10_Y_10_sys_prompt10_5_0.01_ver4_3.csv\n",
+      "/usr/share/d_ollama/data/q_output_code_y_105.csv\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "50it [07:12,  8.64s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Task l_4_10_Y_sys_prompt10_5 실행 중: 4\n",
+      "./result/sc_l_result_4_10_Y_10_sys_prompt10_5_0.01_ver4_4.csv\n",
+      "/usr/share/d_ollama/data/q_output_code_y_105.csv\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "50it [08:06,  9.73s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Task l_4_10_Y_sys_prompt10_5 실행 중: 5\n",
+      "./result/sc_l_result_4_10_Y_10_sys_prompt10_5_0.01_ver4_5.csv\n",
+      "/usr/share/d_ollama/data/q_output_code_y_105.csv\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "50it [07:14,  8.68s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Task l_4_10_Y_sys_prompt10_5 실행 중: 6\n",
+      "./result/sc_l_result_4_10_Y_10_sys_prompt10_5_0.01_ver4_6.csv\n",
+      "/usr/share/d_ollama/data/q_output_code_y_105.csv\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "50it [07:47,  9.35s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Task l_4_10_Y_sys_prompt10_5 실행 중: 7\n",
+      "./result/sc_l_result_4_10_Y_10_sys_prompt10_5_0.01_ver4_7.csv\n",
+      "/usr/share/d_ollama/data/q_output_code_y_105.csv\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "50it [07:38,  9.18s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Task l_4_10_Y_sys_prompt10_5 실행 중: 8\n",
+      "./result/sc_l_result_4_10_Y_10_sys_prompt10_5_0.01_ver4_8.csv\n",
+      "/usr/share/d_ollama/data/q_output_code_y_105.csv\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "50it [07:23,  8.86s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Task l_4_10_Y_sys_prompt10_5 실행 중: 9\n",
+      "./result/sc_l_result_4_10_Y_10_sys_prompt10_5_0.01_ver4_9.csv\n",
+      "/usr/share/d_ollama/data/q_output_code_y_105.csv\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "50it [06:56,  8.33s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Task l_4_10_Y_sys_prompt10_5 완료\n",
+      "모든 작업 완료\n"
      ]
     }
    ],
@@ -103,7 +223,7 @@
     "if __name__ == \"__main__\":\n",
     "\n",
     "\n",
-    "    process3 = Process(target=task, args=('l', 4, 10, 'Y', 10, 'sys_prompt10', 5, 0.01, 'ver1'))\n",
+    "    process3 = Process(target=task, args=('l', 4, 10, 'Y', 10, 'sys_prompt10', 5, 0.01, 'ver4'))\n",
     "    process3.start()\n",
     "    \n",
     "    process3.join()\n",
@@ -116,10 +236,8 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
