--- a/LLM/2_calculate_acc.ipynb
+++ b/LLM/2_calculate_acc.ipynb
@@ -331,9 +331,173 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sc_l_result_4_10_Y_10_sys_prompt10_5_0.01_ver4_9.csv\n",
+      "sc_l_result_4_10_Y_10_sys_prompt10_5_0.01_ver4_5.csv\n",
+      "sc_l_result_4_10_Y_10_sys_prompt10_5_0.01_ver4_7.csv\n",
+      "sc_l_result_4_10_Y_10_sys_prompt10_5_0.01_ver4_6.csv\n",
+      "sc_l_result_4_10_Y_10_sys_prompt10_5_0.01_ver4_3.csv\n",
+      "sc_l_result_4_10_Y_10_sys_prompt10_5_0.01_ver4_0.csv\n",
+      "sc_l_result_4_10_Y_10_sys_prompt10_5_0.01_ver4_1.csv\n",
+      "sc_l_result_4_10_Y_10_sys_prompt10_5_0.01_ver4_4.csv\n",
+      "sc_l_result_4_10_Y_10_sys_prompt10_5_0.01_ver4_8.csv\n",
+      "sc_l_result_4_10_Y_10_sys_prompt10_5_0.01_ver4_2.csv\n",
+      "l_result_4_10_Y :  79.36507936507937\n"
+     ]
+    }
+   ],
+   "source": [
+    "# (target=task, args=('l', 4, 30, 'Y', 100, 'sys_prompt9', 5, 0.01, 'ver3'))\n",
+    "sc_calc_acc_condition_with_temp_with_sc('l', 4, 10, 'Y', 10, 'sys_prompt10', 5,  0.01, 'ver4')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sc_l_result_4_10_Y_10_sys_prompt10_5_0.01_ver1_2.csv\n",
+      "sc_l_result_4_10_Y_10_sys_prompt10_5_0.01_ver1_3.csv\n",
+      "sc_l_result_4_10_Y_10_sys_prompt10_5_0.01_ver1_0.csv\n",
+      "sc_l_result_4_10_Y_10_sys_prompt10_5_0.01_ver1_6.csv\n",
+      "sc_l_result_4_10_Y_10_sys_prompt10_5_0.01_ver1_9.csv\n",
+      "sc_l_result_4_10_Y_10_sys_prompt10_5_0.01_ver1_5.csv\n",
+      "sc_l_result_4_10_Y_10_sys_prompt10_5_0.01_ver1_1.csv\n",
+      "sc_l_result_4_10_Y_10_sys_prompt10_5_0.01_ver1_4.csv\n",
+      "sc_l_result_4_10_Y_10_sys_prompt10_5_0.01_ver1_7.csv\n",
+      "sc_l_result_4_10_Y_10_sys_prompt10_5_0.01_ver1_8.csv\n",
+      "l_result_4_10_Y :  85.71428571428571\n"
+     ]
+    }
+   ],
+   "source": [
+    "# (target=task, args=('l', 4, 30, 'Y', 100, 'sys_prompt9', 5, 0.01, 'ver3'))\n",
+    "sc_calc_acc_condition_with_temp_with_sc('l', 4, 10, 'Y', 10, 'sys_prompt10', 5,  0.01, 'ver1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_16.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_84.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_0.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_10.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_64.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_35.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_72.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_2.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_12.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_74.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_62.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_54.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_32.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_45.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_18.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_86.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_15.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_33.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_3.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_88.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_98.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_99.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_69.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_11.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_40.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_31.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_52.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_28.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_94.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_77.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_20.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_87.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_44.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_71.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_57.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_58.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_24.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_75.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_19.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_38.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_22.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_1.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_90.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_73.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_78.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_93.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_82.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_26.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_42.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_17.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_30.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_13.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_91.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_59.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_34.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_97.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_8.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_80.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_9.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_41.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_5.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_14.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_53.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_29.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_66.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_56.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_83.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_48.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_36.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_43.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_55.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_7.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_92.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_25.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_81.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_60.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_21.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_39.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_61.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_95.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_49.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_67.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_65.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_46.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_37.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_63.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_23.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_27.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_50.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_79.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_68.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_76.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_51.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_96.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_6.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_70.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_89.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_85.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_4.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_47.csv\n",
+      "l_result_4_30_Y :  83.52098259979529\n"
+     ]
+    }
+   ],
    "source": [
     "# sc_calc_acc_condition_with_temp_with_sc('l', 4, 15, 'Y', 30, 'sys_prompt8', 5,  0.01, 'ver1')\n",
     "# # process3 = Process(target=task, args=('l', 4, 15, 'Y', 30, 'sys_prompt8', 3, 0.01, 'ver1'))\n",
