--- a/complexity/forpython_20222023/4_cognitive_complexity_discontinuity_ver3.ipynb
+++ b/complexity/forpython_20222023/4_cognitive_complexity_discontinuity_ver3.ipynb
@@ -49,7 +49,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_year_list = ['2021', '2022', '2023']"
+    "input_year_list = ['2021', '2022', '2023']\n",
+    "year_range = '2223'"
    ]
   },
   {
@@ -717,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -727,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -758,7 +759,6 @@
        "      <th>Path</th>\n",
        "      <th>File Name</th>\n",
        "      <th>Cognitive Complexity</th>\n",
-       "      <th>rel_week</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -771,7 +771,6 @@
        "      <td>0_70702244.py</td>\n",
        "      <td>0_70702244.py</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>-49.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -782,7 +781,6 @@
        "      <td>113_70542818.py</td>\n",
        "      <td>113_70542818.py</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>-48.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -793,7 +791,6 @@
        "      <td>115_70542928.py</td>\n",
        "      <td>115_70542928.py</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>-48.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -804,7 +801,6 @@
        "      <td>116_70542928.py</td>\n",
        "      <td>116_70542928.py</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>-48.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -815,11 +811,9 @@
        "      <td>118_70543017.py</td>\n",
        "      <td>118_70543017.py</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>-48.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
-       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -837,7 +831,6 @@
        "      <td>13707_77356328.py</td>\n",
        "      <td>13707_77356328.py</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>47.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>940795</th>\n",
@@ -848,7 +841,6 @@
        "      <td>13710_77356332.py</td>\n",
        "      <td>13710_77356332.py</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>47.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>940798</th>\n",
@@ -859,7 +851,6 @@
        "      <td>13713_77356352.py</td>\n",
        "      <td>13713_77356352.py</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>47.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>940799</th>\n",
@@ -870,7 +861,6 @@
        "      <td>13714_77356372.py</td>\n",
        "      <td>13714_77356372.py</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>47.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>940800</th>\n",
@@ -881,11 +871,10 @@
        "      <td>13715_77356372.py</td>\n",
        "      <td>13715_77356372.py</td>\n",
        "      <td>22.0</td>\n",
-       "      <td>47.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>482331 rows × 8 columns</p>\n",
+       "<p>482331 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -915,23 +904,23 @@
        "940799  from tkinter import Tk, Canvas, Button, Checkb...  13714_77356372.py   \n",
        "940800  def clean_temp_files():\\n    username = getpas...  13715_77356372.py   \n",
        "\n",
-       "                File Name  Cognitive Complexity  rel_week  \n",
-       "0           0_70702244.py                   0.0     -49.0  \n",
-       "1         113_70542818.py                   0.0     -48.0  \n",
-       "3         115_70542928.py                   0.0     -48.0  \n",
-       "4         116_70542928.py                   0.0     -48.0  \n",
-       "6         118_70543017.py                   0.0     -48.0  \n",
-       "...                   ...                   ...       ...  \n",
-       "940792  13707_77356328.py                   0.0      47.0  \n",
-       "940795  13710_77356332.py                   0.0      47.0  \n",
-       "940798  13713_77356352.py                   0.0      47.0  \n",
-       "940799  13714_77356372.py                   2.0      47.0  \n",
-       "940800  13715_77356372.py                  22.0      47.0  \n",
+       "                File Name  Cognitive Complexity  \n",
+       "0           0_70702244.py                   0.0  \n",
+       "1         113_70542818.py                   0.0  \n",
+       "3         115_70542928.py                   0.0  \n",
+       "4         116_70542928.py                   0.0  \n",
+       "6         118_70543017.py                   0.0  \n",
+       "...                   ...                   ...  \n",
+       "940792  13707_77356328.py                   0.0  \n",
+       "940795  13710_77356332.py                   0.0  \n",
+       "940798  13713_77356352.py                   0.0  \n",
+       "940799  13714_77356372.py                   2.0  \n",
+       "940800  13715_77356372.py                  22.0  \n",
        "\n",
-       "[482331 rows x 8 columns]"
+       "[482331 rows x 7 columns]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -942,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -973,7 +962,6 @@
        "      <th>Path</th>\n",
        "      <th>File Name</th>\n",
        "      <th>Cognitive Complexity</th>\n",
-       "      <th>rel_week</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -986,7 +974,6 @@
        "      <td>0_70702244.py</td>\n",
        "      <td>0_70702244.py</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>-49.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -997,7 +984,6 @@
        "      <td>113_70542818.py</td>\n",
        "      <td>113_70542818.py</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>-48.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1008,7 +994,6 @@
        "      <td>115_70542928.py</td>\n",
        "      <td>115_70542928.py</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>-48.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1019,7 +1004,6 @@
        "      <td>116_70542928.py</td>\n",
        "      <td>116_70542928.py</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>-48.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -1030,11 +1014,9 @@
        "      <td>118_70543017.py</td>\n",
        "      <td>118_70543017.py</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>-48.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
-       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -1052,7 +1034,6 @@
        "      <td>13707_77356328.py</td>\n",
        "      <td>13707_77356328.py</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>47.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>940795</th>\n",
@@ -1063,7 +1044,6 @@
        "      <td>13710_77356332.py</td>\n",
        "      <td>13710_77356332.py</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>47.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>940798</th>\n",
@@ -1074,7 +1054,6 @@
        "      <td>13713_77356352.py</td>\n",
        "      <td>13713_77356352.py</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>47.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>940799</th>\n",
@@ -1085,7 +1064,6 @@
        "      <td>13714_77356372.py</td>\n",
        "      <td>13714_77356372.py</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>47.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>940800</th>\n",
@@ -1096,11 +1074,10 @@
        "      <td>13715_77356372.py</td>\n",
        "      <td>13715_77356372.py</td>\n",
        "      <td>22.0</td>\n",
-       "      <td>47.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>482331 rows × 8 columns</p>\n",
+       "<p>482331 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1130,23 +1107,23 @@
        "940799  from tkinter import Tk, Canvas, Button, Checkb...  13714_77356372.py   \n",
        "940800  def clean_temp_files():\\n    username = getpas...  13715_77356372.py   \n",
        "\n",
-       "                File Name  Cognitive Complexity  rel_week  \n",
-       "0           0_70702244.py                   0.0     -49.0  \n",
-       "1         113_70542818.py                   0.0     -48.0  \n",
-       "3         115_70542928.py                   0.0     -48.0  \n",
-       "4         116_70542928.py                   0.0     -48.0  \n",
-       "6         118_70543017.py                   0.0     -48.0  \n",
-       "...                   ...                   ...       ...  \n",
-       "940792  13707_77356328.py                   0.0      47.0  \n",
-       "940795  13710_77356332.py                   0.0      47.0  \n",
-       "940798  13713_77356352.py                   0.0      47.0  \n",
-       "940799  13714_77356372.py                   2.0      47.0  \n",
-       "940800  13715_77356372.py                  22.0      47.0  \n",
+       "                File Name  Cognitive Complexity  \n",
+       "0           0_70702244.py                   0.0  \n",
+       "1         113_70542818.py                   0.0  \n",
+       "3         115_70542928.py                   0.0  \n",
+       "4         116_70542928.py                   0.0  \n",
+       "6         118_70543017.py                   0.0  \n",
+       "...                   ...                   ...  \n",
+       "940792  13707_77356328.py                   0.0  \n",
+       "940795  13710_77356332.py                   0.0  \n",
+       "940798  13713_77356352.py                   0.0  \n",
+       "940799  13714_77356372.py                   2.0  \n",
+       "940800  13715_77356372.py                  22.0  \n",
        "\n",
-       "[482331 rows x 8 columns]"
+       "[482331 rows x 7 columns]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1157,14 +1134,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_263108/3161297218.py:1: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_1587033/3161297218.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1179,7 +1156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1210,7 +1187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1220,7 +1197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1299,7 +1276,7 @@
        "4     -96.0  6.596760e+07  355703.084840              0.979995"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1310,20 +1287,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "chow_df = calc_ed_com_mean_df[['rel_week', 'Cognitive Complexity']]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "chow_df = chow_df[(chow_df['rel_week']>=-52)&(chow_df['rel_week']<52)]"
+    "# 전체 데이터셋 \n",
+    "with open(f'{conf.DATA_PATH}/data/calc_ed_com_mean_df_{input_pl}_{year_range}.pkl', 'wb') as f:\n",
+    "    pickle.dump(calc_ed_com_mean_df, f)\n"
    ]
   },
   {
@@ -1332,27 +1302,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = chow_df['rel_week'].values"
+    "chow_df = calc_ed_com_mean_df[['rel_week', 'Cognitive Complexity']]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 33,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "52"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "np.argmax(np.where(x <= 0)) "
+    "chow_df = chow_df[(chow_df['rel_week']>=-52)&(chow_df['rel_week']<52)]"
    ]
   },
   {
@@ -1361,9 +1320,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "chow_df_1year = chow_df[chow_df['rel_week']>=-52]\n",
-    "st_chow_1year = st.Stats(chow_df_1year['rel_week'].values, chow_df_1year['Cognitive Complexity'].values, 2, 0.95)\n",
-    "F_stat_1, p_value_1 = st_chow_1year.chow_test()\n"
+    "x = chow_df['rel_week'].values"
    ]
   },
   {
@@ -1374,10 +1331,41 @@
     {
      "data": {
       "text/plain": [
-       "51"
+       "52"
       ]
      },
      "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.argmax(np.where(x <= 0)) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chow_df_1year = chow_df[chow_df['rel_week']>=-52]\n",
+    "st_chow_1year = st.Stats(chow_df_1year['rel_week'].values, chow_df_1year['Cognitive Complexity'].values, 2, 0.95)\n",
+    "F_stat_1, p_value_1 = st_chow_1year.chow_test()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "51"
+      ]
+     },
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1388,7 +1376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1401,7 +1389,7 @@
        "        -8.,  -7.,  -6.,  -5.,  -4.,  -3.,  -2.])"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1412,7 +1400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1458,7 +1446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1477,7 +1465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1488,7 +1476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1555,7 +1543,7 @@
        "52     -48.0              0.982172"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
